feat: "done the save and endpoint to search the last three. I also made some adjustments to DepositionsDataDto to use JsonView. "

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,10 +4,14 @@ server:
 spring:
   datasource:
     url: 'jdbc:postgresql://${DATABASE_HOST:localhost}:${DATABASE_PORT:5432}/${DATABASE_NAME:jornada_milhas}'
-    username: ${DATABASE_USER:itslucassantos}
-    password: ${DATABASE_PASSWORD:7149}
+    username: ${DATABASE_USER:${DB_USER}}
+    password: ${DATABASE_PASSWORD:${DB_PASSWORD}}
     driver-class-name: org.postgresql.Driver
 
   output:
     ansi:
       enabled: Always
+
+  jpa:
+    show-sql: true
+    format-sql: true
